--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
 
     <body>
  <!-- logo-->
-      <div  id="box">
         <div id="container">
-            <div id="logo_container">
+            <div id="logo_container"></div>
             <img id="logo" src="logo.png">
-            </div>
-        </div>
-       </div>
+        </div> 
      </body>
 </html>
