--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div id="container">
             <div id="logo_container"></div>
             <img id="logo" src="logo.png">
+            <h1>Hello world</h1>
             <h3 id="Descrizione">Un progetto completamente dedicato all’ambiente che è cresciuto nel corso del tempo fino a diventare una Onlus. Diventa ufficiale la nascita dell’Associazione Hello World! onlus, l’organizzazione senza scopo di lucro che fa seguito al progetto Salviamo il Pianeta, che ha nella principale filosofia aziendale quella della salvaguardia dell’ambiente e dell’ecosostenibilità.</h3>
             <p>L’iniziativa ha l’obiettivo di sensibilizzare – attraverso storytelling, testimonianze di esperienze dirette ed azioni concrete – il grande pubblico relativamente a temi come la salvaguardia dell’ambiente, la tutela delle specie animali, l’attenzione ai grandi problemi ambientali e la valorizzazione dei luoghi più fragili ed incontaminati della Terra.</p>
             <img id="terra" src="terra.png">
